--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<!--- ICS2O-My first PWA --->
+<!--- ICS2O-Assignment-04-JS-B --->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="My first PWA" />
+    <meta name="description" content="Assignment-4" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Mikey Gloriani" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>GitHub page as PWA template</title>
+    <title>Assignment 4</title>
     <link
       rel="canonical"
-      href="https://mikeygloriani.github.io/ICS2O-Template-PWA/"
+      href="https://mikeygloriani.github.io/ICS2O-Assignment-04-JS-B/"
     />
-    <link rel="manifest" href="/ICS2O-Template-PWA/manifest.webmanifest" />
+    <link rel="manifest" href="/ICS2O-Assignment-04-JS-B/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/style.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
@@ -58,10 +58,10 @@
       <main class="mdl-layout__content">
         <p></p>
         <img
-          src="./images/notebook-animation.svg"
-          alt="Computer"
-          width="25%"
-          height="25%"
+          src="./images/menu.svg"
+          alt="menu"
+          width="50%"
+          height="50%"
         />
         <p></p>
         <!-- Raised button with ripple -->
